--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,66 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 
+ul,
+ol,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-size: 100px;
+  z-index: 3;
+}
+
+section {
+  width: 100%;
+  position: relative;
+}
+section:nth-of-type(1) {
+  height: 1000px;
+  background: orange;
+}
+section:nth-of-type(2) {
+  height: 700px;
+  background: hotpink;
+}
+section:nth-of-type(3) {
+  height: 900px;
+  background: aqua;
+}
+section:nth-of-type(4) {
+  height: 1700px;
+  background: lightgreen;
+}
+
+ul {
+  position: fixed;
+  right: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+ul li {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background: #fff;
+  margin-bottom: 20px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+ul li.on {
+  height: 80px;
+  background: #111;
+}
 
 /*# sourceMappingURL=style.css.map */
