--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ h1 {
 section {
   width: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 section:nth-of-type(1) {
   height: 1000px;
@@ -41,6 +44,19 @@ section:nth-of-type(3) {
 section:nth-of-type(4) {
   height: 1700px;
   background: lightgreen;
+}
+section article {
+  width: 200px;
+  height: 300px;
+  background: #fff;
+  margin: 20px;
+  opacity: 0;
+  transform: rotateY(200deg) translateY(100px);
+  transition: 0.5s;
+}
+section.on article {
+  opacity: 1;
+  transform: rotate(0deg) translateY(0px);
 }
 
 ul {
