--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,6 +24,9 @@ h1 {
 section {
   width: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:nth-of-type(1) {
     height: 1000px;
@@ -40,6 +43,22 @@ section {
   &:nth-of-type(4) {
     height: 1700px;
     background: lightgreen;
+  }
+
+  article {
+    width: 200px;
+    height: 300px;
+    background: #fff;
+    margin: 20px;
+    opacity: 0;
+    transform: rotateY(200deg) translateY(100px);
+    transition: 0.5s;
+  }
+  &.on {
+    article {
+      opacity: 1;
+      transform: rotate(0deg) translateY(0px);
+    }
   }
 }
 ul {
