--- a/css/style.css
+++ b/css/style.css
@@ -4,30 +4,18 @@
   box-sizing: border-box;
 }
 
-ul,
-ol,
-li {
+ul, ol, li {
   list-style: none;
 }
 
 a {
   text-decoration: none;
-}
-
-h1 {
-  position: fixed;
-  top: 0;
-  left: 0;
-  font-size: 100px;
-  z-index: 3;
+  outline: 0;
 }
 
 section {
   width: 100%;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 section:nth-of-type(1) {
   height: 1000px;
@@ -36,27 +24,70 @@ section:nth-of-type(1) {
 section:nth-of-type(2) {
   height: 700px;
   background: hotpink;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+section:nth-of-type(2) article {
+  width: 600px;
+}
+section:nth-of-type(2) article svg path {
+  fill: transparent;
+  stroke: #000;
+  stroke-width: 1;
+  stroke-dasharray: 1660;
+  stroke-dashoffset: 1660;
+  transition: 2s;
+}
+section:nth-of-type(2).on article svg path {
+  stroke-dashoffset: 0;
 }
 section:nth-of-type(3) {
   height: 900px;
   background: aqua;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  perspective: 700px;
+}
+section:nth-of-type(3) article {
+  width: 300px;
+  height: 400px;
+  background: #fff;
+  margin: 50px;
+  opacity: 0;
+  transform: rotateY(180deg) translateY(100px);
+  transition: 0.5s;
+}
+section:nth-of-type(3) article:nth-of-type(1) {
+  transition-delay: 0.1s;
+}
+section:nth-of-type(3) article:nth-of-type(2) {
+  transition-delay: 0.2s;
+}
+section:nth-of-type(3) article:nth-of-type(3) {
+  transition-delay: 0.3s;
+}
+section:nth-of-type(3).on article {
+  opacity: 1;
+  transform: rotateY(0deg) translateY(0px);
 }
 section:nth-of-type(4) {
   height: 1700px;
   background: lightgreen;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-section article {
-  width: 200px;
-  height: 300px;
-  background: #fff;
-  margin: 20px;
-  opacity: 0;
-  transform: rotateY(200deg) translateY(100px);
-  transition: 0.5s;
+section:nth-of-type(4) article {
+  width: 600px;
 }
-section.on article {
-  opacity: 1;
-  transform: rotate(0deg) translateY(0px);
+section:nth-of-type(4) article svg path {
+  fill: transparent;
+  stroke: #000;
+  stroke-width: 1;
+  stroke-dasharray: 2040;
+  stroke-dashoffset: 2040;
 }
 
 ul {
