--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,32 +1,9 @@
 @charset "utf-8";
+@import "reset";
 
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-ul,
-ol,
-li {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-
-h1 {
-  position: fixed;
-  top: 0;
-  left: 0;
-  font-size: 100px;
-  z-index: 3;
-}
 section {
   width: 100%;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   &:nth-of-type(1) {
     height: 1000px;
@@ -35,37 +12,85 @@ section {
   &:nth-of-type(2) {
     height: 700px;
     background: hotpink;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    article {
+      width: 600px;
+    
+      svg path {
+        fill: transparent;
+        stroke: #000;
+        stroke-width: 1;
+        stroke-dasharray: 1660;
+        stroke-dashoffset: 1660;
+        transition: 2s;
+      }
+    }
+
+    &.on {
+      article svg path {
+        stroke-dashoffset: 0;
+      }
+    }
   }
   &:nth-of-type(3) {
     height: 900px;
     background: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    perspective: 700px;
+
+    article {
+      width: 300px;
+      height: 400px;
+      background: #fff;
+      margin: 50px;
+      opacity: 0;
+      transform: rotateY(180deg) translateY(100px);
+      transition: 0.5s;
+
+      @for $i from 1 through 3 {
+        &:nth-of-type(#{$i}) {transition-delay: 0.1s * $i }
+      }
+    }
+
+    &.on {
+      article {
+        opacity: 1;
+        transform: rotateY(0deg) translateY(0px);
+      }
+    }
   }
   &:nth-of-type(4) {
     height: 1700px;
     background: lightgreen;
-  }
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  article {
-    width: 200px;
-    height: 300px;
-    background: #fff;
-    margin: 20px;
-    opacity: 0;
-    transform: rotateY(200deg) translateY(100px);
-    transition: 0.5s;
-  }
-  &.on {
     article {
-      opacity: 1;
-      transform: rotate(0deg) translateY(0px);
+      width: 600px;
+
+      svg path {
+        fill: transparent;
+        stroke: #000;
+        stroke-width: 1;
+        stroke-dasharray: 2040;
+        stroke-dashoffset: 2040;
+      }
     }
   }
 }
+
 ul {
   position: fixed;
   right: 50px;
   top: 50%;
   transform: translateY(-50%);
+  
   li {
     width: 20px;
     height: 20px;
@@ -74,6 +99,7 @@ ul {
     margin-bottom: 20px;
     cursor: pointer;
     transition: 0.5s;
+
     &.on {
       height: 80px;
       background: #111;
